# openapi-tide

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: attr.rs  cache.rs  lib.rs
derive/src/spec/: fields.rs  filetree.rs  mod.rs  path.rs  schema.rs
examples/: foo.rs
examples/MVP/: mvp.gen.rs  mvp.rs  spec.yaml
src/: lib.rs
