[package]
name = "openapi_tide"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.9"
async-trait = "0.1"
serde = "1.0"
async-std = { version = "1.6", features = ["attributes"] }