[package]
name = "openapi-derive"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
serde = "1.0"
openapi_utils = "0.2.0"
openapiv3 = "0.3.2"
serde_yaml = "0.8"
serde_json = "1.0"
indexmap = "1.4"
Inflector = "0.11.4"
